<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- APP -->
	<string name="app_name">Screen Off</string>
    <string name="app_introduction">Please turn on the Permission of lock screen, If you want to remove this App, you should go to 【Settings】→【Security】→【Device administrators】and cancel permission first.</string>
    <string name="device_admin_title">Turn Off and Lock Screen</string>
    <string name="device_admin_description">Only one function that is Turn Off and Lock Screen in this App, if you don\'t like press power key, maybe you like it. If you want to remove this App, you should go to 【Settings】→【Security】→【Device administrators】and cancel permission first.</string>
    <string name="device_admin_remove_msg">Remove permission of Device administrators succeed, You can remove this App Now.</string>
	<string name="banner_ad_unit_id">ca-app-pub-2487183748401331/5340398205</string>
	
    <!-- Setting -->
    <string name="action_settings">Screen Off Setting</string>
    <string name="start_screenoff_popwindow">Start floating button</string>
    <string name="start_screenoff_popwindow_study">Instruction for floating button</string>
    <string name="start_screenoff_popwindow_study2">Single click floating button could lock screen,\n\nDouble click floating button could hide floating button temporarily,\n\nYou can restart floating button in the notification bar.</string>
    <string name="start_screenoff_popwindow_study3">Xiaomi mobile user please turn on 【Show popup windows】and【Custom notification】</string>
    <string name="start_screenoff_popwindow_hint">Click here to display floating button</string>
    <string name="boot_screenoff_popwindow">Autostart floating button at reboot</string>
    <string name="boot_screenoff_popwindow_hint">Donate Version could enable all features</string>
    <string name="screenoff_popwindow_size">Floating button icon size</string>
    <string name="screenoff_return_to_home">Return to home after lock screen</string>
    <string name="screenoff_return_to_home_hint">If enable this function, mobile will show up home screen</string>
    <string name="support_me">Support this App</string>
    <string name="support_me_hint">Your support can help me to develop more apps,\nSupport this app, all features are enabled.\nIf you had supported, please click here and upgrade to all features version.</string>
    <string name="iabhelper_failed">Retrieve transaction data failed, Please try later!</string>
    <string name="iabhelper_fullversion">Thanks, all features are enabled.</string>
    <string name="full_version_promote_title">Please upgrade to Donate Version</string>
    <string name="full_version_promote_hint">Donate Version could enable all features,\nfor example Autostart floating button at reboot, restart floating button in the notification bar etc...</string>
    <string name="full_version_buy">Upgrade to Donate Version</string>
    <string name="only_full_version">Donate Version features</string>
    <string name="only_full_version2">Donate Version could show floating button directly</string>
    <string name="option_ok">OK</string>
    <string name="option_cancel">Cancel</string>

    <string-array name="option_icon_size_string">
        <item>Small</item>
        <item>Medium</item>
        <item>Big</item>
    </string-array>
    <string-array name="option_icon_size_value">
        <item>40</item>
        <item>60</item>
        <item>80</item>
    </string-array>

    <!-- Preference Key -->
    <string name="key_setting_group">key_setting_group"</string>
    <string name="key_setting_start_popwindow">key_setting_start_popwindow</string>
    <string name="key_setting_boot_popwindow">key_setting_boot_popwindow</string>
    <string name="key_setting_support_me">key_setting_support_me</string>
    <string name="key_setting_icon_size">key_setting_icon_size</string>
    <string name="key_setting_return_home">key_setting_return_home</string>
    <string name="key_setting_popwindow_study">key_setting_popwindow_study</string>
    <string name="key_setting_full_version">key_setting_full_version</string>

</resources>