<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:key="@string/key_setting_support_me"
        android:summary="@string/support_me_hint"
        android:title="@string/support_me" />
    <Preference
        android:key="@string/key_setting_start_popwindow"
        android:summary="@string/start_screenoff_popwindow_hint"
        android:title="@string/start_screenoff_popwindow" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="@string/key_setting_boot_popwindow"
        android:summary="@string/boot_screenoff_popwindow_hint"
        android:title="@string/boot_screenoff_popwindow" />
    <CheckBoxPreference
        android:defaultValue="true"
        android:key="@string/key_setting_return_home"
        android:summary="@string/screenoff_return_to_home_hint"
        android:title="@string/screenoff_return_to_home" />

    <ListPreference
        android:defaultValue="60"
        android:entries="@array/option_icon_size_string"
        android:entryValues="@array/option_icon_size_value"
        android:key="@string/key_setting_icon_size"
        android:title="@string/screenoff_popwindow_size" />

    <Preference
        android:key="@string/key_setting_popwindow_study"
        android:title="@string/start_screenoff_popwindow_study" />

</PreferenceScreen>